--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,8 +1,17 @@
 {
     "tasks": [
+        // {
+        //     "type": "cargo",
+        //     "subcommand": "build",
+        //     "problemMatcher": [
+        //         "$rustc"
+        //     ],
+        //     "group": "build",
+        //     "label": "Rust: cargo build - yaffe-rs"
+        // },
         {
-            "type": "cargo",
-            "subcommand": "build",
+            "type": "shell",
+            "command": "cargo rustc -- -C link-args=\"Yaffe.res\"",
             "problemMatcher": [
                 "$rustc"
             ],
@@ -12,41 +21,11 @@
         {
             "label": "Rust: cargo build --release",
             "type": "shell",
-            "command": "cargo build --release",
+            "command": "cargo rustc --release -- -C link-args=\"Yaffe.res\"",
             "problemMatcher": [
                 "$rustc"
             ],
             "group": "build",
         }
     ]
-} // {
-//     // See https://go.microsoft.com/fwlink/?LinkId=733558
-//     // for the documentation about the tasks.json format
-//     "version": "2.0.0",
-//     "tasks": [
-//         {
-//             "label": "cargo run example",
-//             "type": "shell",
-//             "command": "cargo run --example ${fileBasenameNoExtension}",
-//             "problemMatcher": [
-//                 "$rustc"
-//             ]
-//         },
-//         {
-//             "label": "cargo run",
-//             "type": "shell",
-//             "command": "cargo run",
-//             "problemMatcher": [
-//                 "$rustc"
-//             ]
-//         },
-//         {
-//             "label": "cargo build",
-//             "type": "shell",
-//             "command": "cargo build",
-//             "problemMatcher": [
-//                 "$rustc"
-//             ]
-//         }
-//     ]
-// }
+}
