--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,16 @@ edition = "2018"
 
 [dependencies]
 sqlite3 = "0.24.0"
-druid-shell = { git = "https://github.com/linebender/druid.git", features = ["image", "image_png", "jpeg"] }
+speedy2d = "1.1.0"
 lazy_static = "^1"
 spmc = "^0.3"
 chrono = "^0.4"
-system_shutdown = "3.0.0"
 serde_json = "^1"
 serde = { version = "^1", features = ["derive"] }
 reqwest = { version = "^0.11", features = ["blocking"] }
 backtrace = "0.3.59"
+image = "0.23.*"
+#native-dialog = "0.5.5"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
