--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 sqlite3 = "0.24.0"
-speedy2d = "1.1.0"
+speedy2d = { version = "1.1.0", default-features = false, features = ["image-loading"] }
+#speedy2d = { path = "../piet_test/Speedy2d" }
 lazy_static = "^1"
 spmc = "^0.3"
 chrono = "^0.4"
@@ -17,8 +18,10 @@ serde = { version = "^1", features = ["derive"] }
 reqwest = { version = "^0.11", features = ["blocking"] }
 backtrace = "0.3.59"
 image = "0.23.*"
+glutin = "^0.27"
+takeable-option = "0.4"
 #native-dialog = "0.5.5"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
-features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase"]
+features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput"]
