--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ takeable-option = "0.4"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
-features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput"]
+features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput", "mmdeviceapi", "endpointvolume"]
