--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,30 +1,29 @@
 {
     "tasks": [
-        // {
-        //     "type": "cargo",
-        //     "subcommand": "build",
-        //     "problemMatcher": [
-        //         "$rustc"
-        //     ],
-        //     "group": "build",
-        //     "label": "Rust: cargo build - yaffe-rs"
-        // },
         {
+            "label": "Rust: cargo build - yaffe-rs",
             "type": "shell",
-            "command": "cargo rustc -- -C link-args=\"Yaffe.res\"",
-            "problemMatcher": [
-                "$rustc"
-            ],
+            "windows": {
+                "command": "cargo rustc -- -C link-args=\"Yaffe.res\"",
+                "problemMatcher": ["$rustc"],
+            },
+            "linux" : {
+                "command": "cargo rustc",
+                "problemMatcher": ["$rustc"],
+            },
             "group": "build",
-            "label": "Rust: cargo build - yaffe-rs"
         },
         {
             "label": "Rust: cargo build --release",
             "type": "shell",
-            "command": "cargo rustc --release -- -C link-args=\"Yaffe.res\"",
-            "problemMatcher": [
-                "$rustc"
-            ],
+            "windows": {
+                "command": "cargo rustc --release -- -C link-args=\"Yaffe.res\"",
+                "problemMatcher": ["$rustc"],
+            },
+            "linux": {
+                "command": "cargo rustc --release",
+                "problemMatcher": ["$rustc"],
+            },
             "group": "build",
         }
     ]
