--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ takeable-option = "0.4"
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
 features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput"]
+
+
+[target.'cfg(target_os="linux")'.dependencies]
+libc = "0.2.98"
