--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ image = "0.23.*"
 glutin = "^0.27"
 takeable-option = "0.4"
 #rfd = "0.4.0"
+memoffset = "0.6.0"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
