--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,26 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-      {
-        "type": "lldb",
-        "request": "launch",
-        "name": "Launch",
-        "args": [],
-        "program": "${workspaceFolder}/target/debug/yaffe-rs",
-        "windows": {
-          "program": "${workspaceFolder}/target/debug/yaffe-rs.exe"
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'yaffe-rs'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=yaffe-rs",
+                    "--package=yaffe-rs"
+                ],
+                "filter": {
+                    "name": "yaffe-rs",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}/yaffe-rs/"
         },
-        "cwd": "${workspaceFolder}",
-        "stopOnEntry": false,
-        "sourceLanguages": [
-          "rust"
-        ]
-      }
     ]
-  }
+}
