--- a/yaffe-rs/Cargo.toml
+++ b/yaffe-rs/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 sqlite3 = "0.24.0"
 speedy2d = { version = "1.1.1", default-features = false, features = ["image-loading"] }
-lazy_static = "^1"
+#lazy_static = "^1"
 spmc = "^0.3"
 chrono = "^0.4"
 serde_json = "^1"
