--- a/yaffe-rs/Cargo.toml
+++ b/yaffe-rs/Cargo.toml
@@ -7,23 +7,22 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlite3 = "0.24.0"
-speedy2d = { version = "1.7.*", default-features = false, features = ["image-loading"] }
+sqlite3 = "^0.24"
+speedy2d = { version = "^1.7", default-features = false, features = ["image-loading"] }
 spmc = "^0.3"
 chrono = "^0.4"
 serde_json = "^1"
 serde = { version = "^1", features = ["derive"] }
 reqwest = { version = "^0.11", features = ["blocking"] }
-backtrace = "0.3.64"
-image = "0.24.*"
+image = "^0.24"
 glutin = "^0.28"
-takeable-option = "0.5"
-memoffset = "0.6.5"
-dlopen = "0.1.8"
-dlopen_derive = "0.1.3"
-lazy_static = "1.4.0"
+takeable-option = "^0.5"
+memoffset = "^0.6"
+dlopen = "^0.1"
+dlopen_derive = "^0.1"
+lazy_static = "^1.4"
 yaffe-plugin = { path = "../yaffe-plugin" }
-log = { version = "0.4.14" }
+log = "^0.4"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
