Refactor folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,16 @@
 /target
-yaffe-rs/target
-yaffe-rs/Assets
-yaffe-rs/plugins
+/Assets
+/plugins
+/Roms
 log.txt
 yaffe.settings
 yaffe-rs.exe
 Yaffe.db
-Assets/atlas.tex
-yaffe-rs/Roms
 Cargo.lock
 RCa21132
 api_key.txt
 google_api_key.txt
-yaffe-rs/yaffe-rs
-yaffe-rs/version.txt
+version.txt
 yaffe-rs.update
 yaffe-updater.exe
 yaffe-updater
