--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlite3 = "^0.24"
+sqlite = "^0.30"
 speedy2d = { version = "^1.7", default-features = false, features = ["image-loading"] }
 spmc = "^0.3"
 chrono = "^0.4"
@@ -30,7 +30,6 @@ memoffset = "^0.6"
 dlopen = "^0.1"
 dlopen_derive = "^0.1"
 lazy_static = "^1.4"
-#yaffe-plugin = { path = "../yaffe-plugin" }
 log = "^0.4"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
