--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ spmc = "^0.3"
 chrono = "^0.4"
 serde_json = "^1"
 serde = { version = "^1", features = ["derive"] }
-reqwest = { version = "^0.11", features = ["blocking"] }
+reqwest = { version = "^0.11", features = ["blocking", "json"] }
 image = "^0.24"
 glutin = "^0.29"
 takeable-option = "^0.5"
@@ -34,7 +34,7 @@ log = "^0.4"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
-features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput", "mmdeviceapi", "endpointvolume"]
+features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput", "mmdeviceapi", "endpointvolume", "securitybaseapi"]
 
 [target.'cfg(target_os="linux")'.dependencies]
 libc = "0.2.120"
