--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ dlopen = "^0.1"
 dlopen_derive = "^0.1"
 lazy_static = "^1.4"
 log = "^0.4"
+log-panics = "2.1.0"
+rand = "^0.8"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
