--- a/yaffe-rs/Cargo.toml
+++ b/yaffe-rs/Cargo.toml
@@ -9,8 +9,8 @@ name = "yaffe"
 path = "src/main.rs"
 
 [[bin]]
-name = "yaffe-updater"
-path = "src/updater.rs"
+name = "yaffe-helper"
+path = "src/yaffe-helper.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -32,6 +32,9 @@ log = "^0.4"
 log-panics = "2.1.0"
 rand = "^0.8"
 yaffe-lib = { path = "../yaffe-lib" }
+# webview_official = "0.2.0"
+wry = "^0.51"
+winit = "^0.30"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
