--- a/yaffe-rs/Cargo.toml
+++ b/yaffe-rs/Cargo.toml
@@ -37,6 +37,7 @@ rand = "^0.9"
 yaffe-lib = { path = "../yaffe-lib" }
 # webview_official = "0.2.0"
 wry = "^0.51"
+copypasta = "^0.10"
 
 [target.'cfg(target_os="windows")'.dependencies.winapi]
 version = "0.3.9"
