--- a/yaffe-rs/Cargo.toml
+++ b/yaffe-rs/Cargo.toml
@@ -39,9 +39,8 @@ yaffe-lib = { path = "../yaffe-lib" }
 wry = "^0.51"
 copypasta = "^0.10"
 
-[target.'cfg(target_os="windows")'.dependencies.winapi]
-version = "0.3.9"
-features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput", "mmdeviceapi", "endpointvolume", "securitybaseapi", "winbase", "winuser"]
+[target.'cfg(target_os="windows")'.dependencies]
+windows = { version = "^0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Security", "Win32_System_Shutdown", "Win32_System_Threading", "Gaming_Input", "Win32_System_TaskScheduler"] }
 
 [target.'cfg(target_os="linux")'.dependencies]
 libc = "0.2.120"
